--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,28 +1,21 @@
 header {
-
     display: flex;
     justify-content: center;
     height: 45px;
     background-color: rgb(51, 51, 51);
-
     color: rgb(204, 204, 204);
-    //position: fixed;
     z-index: 2;
     left: 0;
     right: 0;
     margin: auto;
-  //  margin-bottom: 400px;
-
-  
 }
+
 .fake-header {
     position: fixed;
     width: 100%;
     height: 45px;
     z-index: 2;
     background-color: rgb(51, 51, 51);
-    
-
 }
 
 header a {
@@ -40,13 +33,11 @@ nav {
     z-index: 3;
     position: fixed;
     height: inherit;
-
 }
 
 .navbar-list {
     display: flex;
     height: 100%;
-
 }
 
 .navbar-list>li {
@@ -59,7 +50,7 @@ nav {
     color: white;
 }
 
-.navbar-list-item{
+.navbar-list-item {
     position: relative;
     color: gainsboro;
 }
@@ -69,21 +60,22 @@ nav {
     background-color: rgb(253, 101, 33);
     color: white;
     border-right: 1px solid rgb(24, 24, 24);
-  
+
 }
-.logo{
+
+.logo {
     width: 70%;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;    
-    
+    align-items: center;
 }
+
 .fa-water {
-      font-size: 1.1rem;
+    font-size: 1.1rem;
 }
 
 .fa-cloud {
-      font-size: 1.5rem;
+    font-size: 1.5rem;
 }
 
 .home {
@@ -123,10 +115,8 @@ nav {
 .profile-picture {
     width: 32px;
     height: 32px;
-    // padding: 5px;
     background-color: gray;
     border-radius: 100px;
-    // margin-left: 30px;
 }
 
 .profile {
@@ -138,21 +128,19 @@ nav {
     align-items: center;
 }
 
-.arrow{
-}
-.username{
+.username {
     width: auto;
-    // display: flex;
-    // align-items: center;
-    overflow:hidden;
-    white-space:nowrap;
+    overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
 }
-.username-box{
+
+.username-box {
     width: 100px;
     display: flex;
     justify-content: space-evenly;
 }
+
 .fa-ellipsis-h {
     color: white;
     font-size: 1.4rem;
@@ -166,37 +154,36 @@ canvas {
     height: 100px;
 }
 
-.active-page{
-    background-color: rgb(17,17,17);
+.active-page {
+    background-color: rgb(17, 17, 17);
     color: white;
 }
 
-.dropdown-menu-1{
+.dropdown-menu-1 {
     top: 45px;
     width: 100%;
-    
     position: absolute;
-    background-color: rgb(18,18,18);
+    background-color: rgb(18, 18, 18);
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
 }
 
-.dropdown-menu-1 div{
+.dropdown-menu-1 div {
     height: 30px;
-    color: rgb(197,197,197);
+    color: rgb(197, 197, 197);
 }
 
-
-.dropdown-menu-1 div:last-child{
+.dropdown-menu-1 div:last-child {
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
 }
-.dropdown-menu-1 div:hover{
+
+.dropdown-menu-1 div:hover {
     background-color: rgb(51, 51, 51);
     color: white;
 }
 
-.dropdown-menu-2{
+.dropdown-menu-2 {
     position: absolute;
     width: 100%;
     height: inherit;
@@ -207,29 +194,25 @@ canvas {
     user-select: none;
 }
 
-.dropdown-menu-2 div:last-child{
+.dropdown-menu-2 div:last-child {
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
 }
-.dropdown-2{
+
+.dropdown-2 {
     position: relative;
 }
+
 .dropdown-menu-2 div {
-    
     display: flex;
     align-items: center;
     justify-content: center;
     height: 30px;
     color: rgb(197, 197, 197);
     background-color: rgb(18, 18, 18);
-
-    
-    
 }
+
 .dropdown-menu-2 div:hover {
     color: white;
     background-color: rgb(51, 51, 51);
 }
-
-
-
