--- a/app/assets/stylesheets/photo_upload_modal.scss
+++ b/app/assets/stylesheets/photo_upload_modal.scss
@@ -1,4 +1,4 @@
-.photo-upload-modal{
+.photo-upload-modal {
     position: fixed;
     left: 0;
     top: 0;
@@ -8,11 +8,9 @@
     height: 100%;
     width: 100%;
     background-color: rgba(49, 49, 49, 0.5);
-
-
 }
 
-.photo-upload-modal-content{
+.photo-upload-modal-content {
     width: 400px;
     height: 250px;
     background-color: white;
@@ -29,6 +27,7 @@
     border-radius: 5px;
     border: 1px solid rgb(141, 141, 141);
 }
+
 .photo-upload-modal-content-text {
     height: 50px;
     display: flex;
@@ -38,7 +37,7 @@
     font-size: 1.1rem;
 }
 
-.photo-upload-modal-content-buttons{
+.photo-upload-modal-content-buttons {
     display: flex;
     width: 300px;
     height: 50px;
@@ -46,34 +45,36 @@
     align-items: center;
     margin-bottom: 40px;
 }
-.photo-upload-modal-content-buttons-cancel{
+
+.photo-upload-modal-content-buttons-cancel {
     width: 90px;
     padding: 2px 5px;
     height: 30px;
     border: 1px solid white;
     border-radius: 3px;
 }
-.photo-upload-modal-content-buttons-cancel:hover{
+
+.photo-upload-modal-content-buttons-cancel:hover {
     border: 1px solid black;
 }
 
 .photo-upload-modal-content-buttons-save {
     width: 90px;
     padding: 2px 5px;
-    background-color: rgb(255,75,0);
+    background-color: rgb(255, 75, 0);
     color: white;
     border-radius: 3px;
     height: 30px;
     border: 1px solid rgb(255, 75, 0);
 }
 
-.photo-upload-modal-content-buttons-save:hover{
+.photo-upload-modal-content-buttons-save:hover {
     border: 1px solid rgb(255, 75, 0);
     background-color: white;
     color: black;
 }
 
-.photo-errors{
+.photo-errors {
     position: absolute;
     left: 0;
     right: 0;
