--- a/app/assets/stylesheets/song_show.scss
+++ b/app/assets/stylesheets/song_show.scss
@@ -1,101 +1,88 @@
-.show-page-container{
+.show-page-container {
     width: 1240px;
     margin: auto;
 }
-.song-show-canvas{
+
+.song-show-canvas {
     margin-top: 5px;
     width: 660px;
     height: 60px;
-    
-    //  image-rendering: -moz-crisp-edges;
-    //  image-rendering: -webkit-crisp-edges;
-    //  image-rendering: pixelated;
-    //  image-rendering: crisp-edges;
 }
-.show-page-top-container{
 
-}
-.show-page-top{
+.show-page-top {
     display: flex;
     height: 350px;
     width: 100%;
-        background-image: radial-gradient(circle 827px at 47.3% 48%, rgba(255, 255, 255, 1) 0%, rgba(138, 192, 216, 1) 90%);
-
+    background-image: radial-gradient(circle 827px at 47.3% 48%, rgba(255, 255, 255, 1) 0%, rgba(138, 192, 216, 1) 90%);
 }
 
-.show-page-song-info{
+.show-page-song-info {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     padding-left: 50px;
     width: 60%;
 }
-.show-page-img{
+
+.show-page-img {
     margin: auto;
     width: 300px;
     height: 300px;
 }
 
-.show-page-song-play-title{
+.show-page-song-play-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.show-play-button{
+.show-play-button {
     width: 80px;
     height: 80px;
     border-radius: 100px;
     text-align: center;
     font-size: 2rem;
     color: white;
-    background-color: rgb(255,75,0);
+    background-color: rgb(255, 75, 0);
 }
 
-.show-page-creator-title{
+.show-page-creator-title {
     padding-left: 40px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    // width: 100%;
-    // text-align: start;
-
 }
-.show-page-creator{
-    // width: fit-content;
+
+.show-page-creator {
     margin: auto;
     width: inherit;
     background-color: black;
     color: rgb(170, 170, 170);
     padding: 5px 10px;
-
 }
 
-.show-page-title{
+.show-page-title {
     background-color: black;
     color: white;
     padding: 5px 10px;
     font-size: 1.5rem;
     text-align: center;
-
-
 }
-.show-page-comment-input{
+
+.show-page-comment-input {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: auto;
-    // width: 600px;
     background-color: rgb(219, 219, 219);
 }
-.show-page-comment-img{
-    
+
+.show-page-comment-img {
     width: 40px;
     height: 40px;
 }
 
-.show-page-input{
-    
+.show-page-input {
     width: 90%;
     margin: 5px;
     background-color: rgb(255, 255, 255);
@@ -104,60 +91,58 @@
     padding: 3px 5px;
 }
 
-.show-page-edit-bar{
+.show-page-edit-bar {
     margin-top: 20px;
     height: 40px;
     width: 170px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    // margin: auto;
 }
 
-.show-page-item-buttons{
+.show-page-item-buttons {
     padding: 5px 10px;
     border-radius: 3px;
 }
 
-.show-page-comment-input-container{
+.show-page-comment-input-container {
     width: 95%;
     margin: auto;
     padding-top: 30px;
     padding-bottom: 15px;
 }
 
-.show-page-comment-container{
+.show-page-comment-container {
     background-color: white;
 }
 
-.show-page-middle-container{
+.show-page-middle-container {
     height: 100%;
     background-color: white;
-    // display: flex;
 }
 
-.show-page-comments-image{
+.show-page-comments-image {
     height: 125px;
     width: 125px;
     border-radius: 100px;
     border: 1px solid rgb(180, 180, 180);
 }
 
-.show-page-followers-tracks{
+.show-page-followers-tracks {
     display: flex;
     justify-content: space-evenly;
-    
     color: rgb(105, 105, 105);
     font-size: 0.8rem;
     font-weight: 300;
     width: 80px;
     text-align: center;
 }
-.show-page-followers-tracks div{
-    display: flex;
 
+.show-page-followers-tracks div {
+    display: flex;
 }
-.show-page-profile-middle{
+
+.show-page-profile-middle {
     height: 250px;
     width: 150px;
     display: flex;
@@ -166,96 +151,83 @@
     justify-content: space-evenly;
 }
 
-.show-page-middle-follow-button{
-
+.show-page-middle-follow-button {
     margin: 0;
     padding: 4px 6px;
 }
 
 .fa-user-friends,
-.fa-music{
+.fa-music {
     padding: 0px 3px;
     padding-top: 2px;
 }
-.show-page-comments-section{
+
+.show-page-comments-section {
     width: 100%;
 }
 
-
-
-.show-page-all-comments{
+.show-page-all-comments {
     display: flex;
-    // width: 95%;
     margin: auto;
     border-top: 1px solid rgb(177, 177, 177);
-    // margin-top: 20px;
 }
 
-.show-page-each-comment-image{
-   
+.show-page-each-comment-image {
     height: 50px;
     width: 50px;
     border-radius: 50px;
 }
-.show-page-each-comment-content{
+
+.show-page-each-comment-content {
     border-bottom: 1px solid rgb(236, 236, 236);
     border-top: 1px solid rgb(236, 236, 236);
-    
     padding: 10px 0px;
     display: flex;
-    // align-items: center; 
-    // justify-content: space-between;
     height: 100%;
 }
 
-.show-page-each-comment-content:hover{
+.show-page-each-comment-content:hover {
     background: rgb(255, 255, 255);
     background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(212, 212, 212, 0.2) 50%, rgba(255, 255, 255, 1) 100%);
 }
-.show-page-comment-username-text{
+
+.show-page-comment-username-text {
     width: 925px;
-    // height: 60px;
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: space-evenly;
     margin-left: 20px;
 }
-.show-page-comment-username{
+
+.show-page-comment-username {
     padding-bottom: 5px;
     color: rgb(109, 109, 109);
     font-size: 0.9rem;
 }
-.show-page-comment-username:hover{
+
+.show-page-comment-username:hover {
     color: rgb(0, 0, 0);
-    
 }
+
 .show-page-comment-text {
     height: 100%;
-    // width: 80%;
     font-weight: 400;
-    // padding-right: 25px;
-     overflow-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
-
-
-.show-comment-post-button{
+.show-comment-post-button {
     padding: 0 10px;
     margin-right: 15px;
     height: 30px;
     text-align: center;
     border-radius: 3px;
-    background-color: rgb(255,75,0);
+    background-color: rgb(255, 75, 0);
     color: rgb(241, 241, 241);
-
 }
 
-.show-comment-post-button:hover{
+.show-comment-post-button:hover {
     background-color: rgb(230, 70, 1);
     color: white;
 }
 
-.show-page-comments-amount{
+.show-page-comments-amount {
     width: 100%;
     font-size: 0.9rem;
     color: rgb(122, 122, 122);
@@ -263,13 +235,14 @@
     padding-bottom: 15px;
     padding-top: 15px;
 }
-.show-page-comments-box{
+
+.show-page-comments-box {
     padding-top: 25px;
     padding-left: 30px;
     width: 100%;
 }
 
-.show-page-description{
+.show-page-description {
     height: 80px;
     width: 400px;
     border: 1px solid rgb(189, 189, 189);
@@ -277,25 +250,21 @@
     overflow-y: scroll;
     padding: 10px;
     color: rgb(102, 102, 102);
-
 }
 
-.show-page-delete-comment{
+.show-page-delete-comment {
     color: rgb(48, 48, 48);
     font-size: 1rem;
     height: 20px;
     margin: auto;
-    
 }
 
-.show-page-delete-comment:hover{
+.show-page-delete-comment:hover {
     color: red;
     font-size: 1rem;
 }
 
-
 .song-genre-show {
-    
     padding: 1px 10px;
     max-width: 80px;
     margin-right: 20px;
@@ -309,14 +278,12 @@
     font-size: 0.8rem;
     height: 20px;
     line-height: 20px;
-    
 }
 
 .song-genre-show:hover {
     background-color: rgb(87, 87, 87);
-
 }
 
-.show-page-song-play-title-box{
+.show-page-song-play-title-box {
     display: flex;
 }
