--- a/app/assets/stylesheets/home_songs_container.scss
+++ b/app/assets/stylesheets/home_songs_container.scss
@@ -152,7 +152,6 @@
 .home-profile-edit:hover {
     border: 1px solid rgb(167, 167, 167);
     color: rgb(43, 43, 43);
-
 }
 
 .home-follow-button {
@@ -165,12 +164,10 @@
     justify-content: space-evenly;
     background-color: rgb(255, 75, 0);
     color: white;
-
 }
 
 .home-follow-button:hover {
     opacity: 0.9;
-
 }
 
 .following {
@@ -228,6 +225,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 200px;
+    width: 90%;
 }
 
 .home-right-panel-description {
@@ -242,7 +240,7 @@
     line-height: 1.2rem;
     color: rgb(107, 107, 107);
     background-color: rgb(248, 248, 248);
-
+    overflow-wrap: break-word;
 }
 
 .home-right-panel-description:hover {
