--- a/app/assets/stylesheets/song_show.scss
+++ b/app/assets/stylesheets/song_show.scss
@@ -250,6 +250,7 @@
     overflow-y: scroll;
     padding: 10px;
     color: rgb(102, 102, 102);
+    overflow-wrap: break-word;
 }
 
 .show-page-delete-comment {
