--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
     <%= javascript_include_tag 'application' %>
     <link rel="shortcut icon" type="image/jpg" href="<%= image_url('favicon.ico') %>"/>
 
+    <meta property="og:image" content="<%= image_url('preview.png')%>">
+
     
     <% if current_user %>
       <script>
