--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Wavesky</title>
+    <title>WaveSky</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     
@@ -17,7 +17,9 @@
     <%= javascript_include_tag 'application' %>
     <link rel="shortcut icon" type="image/jpg" href="<%= image_url('favicon.ico') %>"/>
 
-    <meta property="og:image" content="<%= image_url('preview.png')%>">
+    <meta property="og:image" content="<%= image_url('preview.png') %>">
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
 
     
     <% if current_user %>
