--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
     <meta property="og:image" content="<%= image_url('preview.png') %>">
     <meta property="og:image:width" content="300" />
     <meta property="og:image:height" content="300" />
+    <meta property="og:title" content="WaveSky" />
+    <meta property="og:description" content="WaveSky is the music listening platform with the SoundCloud inspired UX/UI, where users can upload, listen to, comment, and like the songs." />
 
     
     <% if current_user %>
