--- a/app/assets/stylesheets/song_item.scss
+++ b/app/assets/stylesheets/song_item.scss
@@ -263,3 +263,16 @@
 .song-genre:hover {
     background-color: rgb(87, 87, 87);
 }
+
+.hidden-image{
+    position: absolute;
+    opacity: 0;
+}
+
+.smooth-image{
+    transition: all 1s ease-in-out;
+}
+
+.preloaded-image{
+    background-image: linear-gradient(45deg, #ccc, #999, #ccc);
+}
