make player bar draggable

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,9 @@
 <script type="text/javascript">
   window.singer = "<%= image_url('singer.jpg') %>";
 </script>
+<script type="text/javascript">
+  window.empty = "<%= image_url('empty.png') %>";
+</script>
     
   </head>
 
