make volume bar draggable

--- a/app/assets/stylesheets/player.scss
+++ b/app/assets/stylesheets/player.scss
@@ -115,6 +115,12 @@
     font-size: 1rem;
     background-color: rgb(243, 242, 242);
 }
+.fa-volume-mute {
+    width: 20px;
+    text-align: center;
+    font-size: 1rem;
+    background-color: rgb(243, 242, 242);
+}
 
 .player-volume-container {
     position: absolute;
