--- a/app/assets/stylesheets/song_show.scss
+++ b/app/assets/stylesheets/song_show.scss
@@ -28,6 +28,7 @@
     margin: auto;
     width: 300px;
     height: 300px;
+    object-fit: cover;
 }
 
 .show-page-song-play-title {
@@ -53,12 +54,19 @@
     justify-content: space-evenly;
 }
 
-.show-page-creator {
+.show-page-creator{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.show-page-creator p{
     margin: auto;
     width: inherit;
     background-color: black;
     color: rgb(170, 170, 170);
     padding: 5px 10px;
+    margin-right: 50px;
 }
 
 .show-page-title {
@@ -67,6 +75,13 @@
     padding: 5px 10px;
     font-size: 1.5rem;
     text-align: center;
+}
+
+.show-page-title p{
+    // width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .show-page-comment-input {
@@ -285,6 +300,7 @@
     font-size: 0.8rem;
     height: 20px;
     line-height: 20px;
+    cursor: pointer;
 }
 
 .song-genre-show:hover {
